--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1751,107 +1751,107 @@ stories:
   domain: http://www.suwanneedemocrat.com/
   link: https://www.suwanneedemocrat.com/sports/slow-start-costs-hamilton-against-jefferson/article_3f7efaba-25c1-11ea-926b-33275bc10a48.html
 images:
-- name: old-church-oldchurch-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-marcel-duchamp.jpg
-- name: aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-wols.JPG
-- name: server-cloud-server-racks-door-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-granite.jpg
-- name: crow_hot_spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_hot_spicy.jpg
-- name: beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-cinnamon-rolls.jpg
-- name: berlinwall-DSC-0084-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-monet-one.jpg
-- name: copper-circuit-berline-wall-old-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-berline-wall-old-building.jpg
-- name: white-house-lawn-white-house-lawn-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-diego-rivera1.jpg
-- name: meadowbutterfly-meadow-butterfly-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
-- name: copper-circuit-san-francisco-from-salesforce-west.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-francisco-from-salesforce-west.jpg
-- name: window-window-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-marcel-duchamp.jpg
-- name: file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00.jpg
-- name: 35201856153_61bc075e4b-rain-princess.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
-- name: oldhousecars-house-old-cars-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-atari-asteroids.jpg
-- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-- name: oldhotel-oldhotel-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
-- name: sand-hand-sand-hand-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: power-lines-power-lines-empty-space-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-wols.jpg
-- name: curtain-curtain-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-monet-one.jpg
-- name: san-francisco-street-view-san-francisco-street-view-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-yellow-collage.jpg
-- name: berlinwall2-berlinwall-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-ww2-color.jpg
-- name: bf-skinner-skulls-catacomb-up-close.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-skulls-catacomb-up-close.jpg
-- name: mosaic-face-mosaic-face-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-propaganda-leaflets.jpg
-- name: legal-statue-legalstatue-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-three.jpg
-- name: stories-downtown-fredericksburg-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
-- name: downtown-los-angeles-downtown-la-monet-one.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-monet-one.JPG
-- name: dragon-desert-desert-dragon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon.jpg
-- name: razorcliff-razorcliff-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-rainbow-festival.jpg
-- name: school-clouds-church-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit.jpg
-- name: scream-DSC_0115.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0115.jpg
-- name: aws-s3-stories-copper-servers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-copper-servers.jpg
-- name: mediterranean-mediterranean-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-green-zuma.jpg
-- name: old-gas-pumps-oldgaspumps-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-hot-spicy.jpg
-- name: capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-leaflets-of-the-russian-revolution.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-- name: birdhouse-birdhouse-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-purp-paper.jpg
-- name: oldsmallboat-oldsmallboat-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-nazi-poster.jpg
-- name: aws-s3-stories-docks-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-docks-copper-circuit.jpg
-- name: berlinwall2-berlinwall-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-marcel-duchamp.jpg
-- name: border-fence-border-fence-on-hill-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-diego-rivera1.jpg
-- name: la-muse-lincoln-memorial_36690528196_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-memorial_36690528196_o.jpg
-- name: abe-lincoln-one-satan-red-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-00-00.jpg
-- name: lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-marcel-duchamp.jpg
-- name: gypsymosaic-gypsy-eyes-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kand-two.jpg
-- name: mosaic-face-mosaic-face-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
-- name: copper-circuit-public-market-farmers-market.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-public-market-farmers-market.jpg
-- name: beach-rocks-beach-rocks-currents-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purp-paper.jpg
-- name: bf-skinner-sailboat-in-front-of-housing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sailboat-in-front-of-housing.jpg
+- name: white-house-lawn-white-house-lawn-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-space-pizza.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
+- name: rockingchair-face-2-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-granite.jpg
+- name: aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-desert-dragon-horiz-circuit.jpg
+- name: nazi-invasion-city-clouds-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-clouds-waterfront.jpg
+- name: IMG_4038.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/IMG_4038.jpg
+- name: copper-circuit-docks-in-itealy-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-docks-in-itealy-tower.jpg
+- name: copper-circuit-walk-through-garden-tunnel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-walk-through-garden-tunnel.jpg
+- name: ellis-island-ellisisland-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dali-two.jpg
+- name: stalin-time-water-splashing-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-water-splashing-in-rocks.jpg
+- name: supreme-court-supremecourt-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kand-two.jpg
+- name: stalin-time-through-berlin-wall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-through-berlin-wall.jpg
+- name: oldhotel-oldhotel-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-far-away.jpg
+- name: ellis-island-ellis-island-room-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-diego-rivera1.jpg
+- name: mediterranean-mediterranean-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-asteroids.jpg
+- name: old-granary-field-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-aqua.jpg
+- name: ellis-island-ellisisland-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-space-pizza.jpg
+- name: oldcabin-oldcabin-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
+- name: beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-missle.jpg
+- name: copper-circuit-crow-stailess-steal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-crow-stailess-steal.jpg
+- name: cargo-ship-cargo-ship-on-sea-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-creativity.jpg
+- name: death-valley-death-valley-national-park-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
+- name: christianity-christianity-under-construction-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-jap-wav-pr.jpg
+- name: hollywood-building-hollywood-building-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-asteroids.jpg
+- name: christianity-christianity-under-construction-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-atari-missle.jpg
+- name: server-cloud-server-racks-door-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-green-zuma.jpg
+- name: oldtrain-oldtrain-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
+- name: cyber-api-description-wars-img-1910.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-img-1910.jpg
+- name: old-door-lock-old-door-lock-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-cinnamon-rolls.jpg
+- name: old-barn-old-barn-1500-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sand-paper.jpg
+- name: amusement-park-amusement-park-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dry-skin.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: aws-s3-stories-supreme-court-statues.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-statues.jpg
+- name: old-cabin-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crunch-paper.jpg
+- name: white-house-lawn-white-house-window-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kand-two.jpg
+- name: berlinwall2-berlinwall-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-dali.jpg
+- name: berlinwall-DSC-0084-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-space-pizza.jpg
+- name: trucksilo-trucksilo-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-soul.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-collage.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+- name: white-house-lawn-white-house-window-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crunch-paper.jpg
+- name: catacombs-catacombs-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-ww2-dresden.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+- name: nazi-invasion-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dandelions-in-rocks.jpg
+- name: rain-princess-downtown-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-downtown-building.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+- name: dragon_close-up-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-copper-circuit.jpg
+- name: oldtrain-oldtrain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-atari-missle.jpg
+- name: curtain-curtain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-nazi-poster.jpg
+- name: nazi-invasion-train-tracks-seattle-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-tracks-seattle-waterfront.jpg
+- name: old-school-house-old-schoolhouse.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse.jpg
 ---
 Pentagon Says New Jersey Soldier Killed In Afghanistan.&nbsp;Jalen Ramsey Out For Rams' Season Finale With Knee Injury.&nbsp;Family Togetherness Among Christmas Wishes At Backus Legion.&nbsp;Trends On The Gambling Market.&nbsp;Christmas Is Not Secular; Neither Is Santa Claus.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;Texas Barbershop Worker Shot Over Child's Haircut, Police Say.&nbsp;County Considers Gun Control.&nbsp;
